# Chapel-protobuf

./: .gitignore  LICENSE  Makefile.am  Mason.toml  README.md  README.rst  autogen.sh  configure.ac  generate.sh  test.sh
docs/: generatedcodeguide.rst
src/: ByteEncoding.chpl  Encoding.chpl  Fields.chpl  Makefile.am  Protobuf  Protobuf.chpl  ProtobufProtocolSupport.chpl  RepeatedFields.chpl  SimpleFields.chpl  WireEncoding.chpl  field_base.cc  field_base.hh  generator.cc  generator.hh  helpers.cc  helpers.hh  message.cc  message.hh  primitive_field.cc  primitive_field.hh  protobuf.chpl  protoc-gen-chpl  protoc-gen-chpl.cc  reflection_class.cc  reflection_class.hh
src/plugin/: Makefile.am  enum.cpp  enum_field.cc  enum_field.h  field_base.cc  field_base.cpp  field_base.hh  helpers.cc  helpers.cpp  helpers.h  helpers.hh  message.cc  message.cpp  message_field.cc  message_field.cpp  message_field.hh  primitive_field.cc  protoc-gen-chpl  reflection_class.cc  reflection_class.cpp  reflection_class.hh  repeated_message_field.cpp  repeated_message_field.hh  repeated_primitive_field.cc
test/: serializationTest.chpl  varinttest.chpl
test/endToEnd/enums/: read.chpl  read.py  write.chpl  write.py
test/endToEnd/maps/: read.chpl  write.chpl
test/endToEnd/messagefield/: read.chpl  read.py  write.chpl  write.py
test/endToEnd/oneofs/: read.chpl  write.chpl
test/endToEnd/repeatedfield/: read.chpl  read.py  write.chpl  write.py
test/endToEnd/types/: read.chpl  read.py  write.chpl  write.py
test/general/: serializationTest.chpl  serializationTest.good
(+5 files in other folders)
